syntax = "proto3";

import "app/rickandmorty/data/theme/proto/night_mode.proto";

option java_package = "app.rickandmorty.data.theme.proto";
option java_multiple_files = true;

message ThemePreferences {
  NightMode night_mode = 1;
  bool use_dynamic_color = 2;
}
